--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Dev Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-
+      <nav class="logo">
+        <h2 class="nav-title">Shar<span class="primary-text">I</span>ar</h2>
+        <ul>
+          <li><a href="">Portfolio </a></li>
+          <li><a href="">Blog</a></li>
+          <li><button class="btn-primary">Hire Me</button></li>
+        </ul>
+      </nav>
     </header>
 
-    <main>
+    <main></main>
 
-
-    </main>
-
-    <footer>
-
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
