--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Dev Portfolio</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav class="logo">
         <h2 class="nav-title">Shar<span class="primary-text">I</span>ar</h2>
         <ul>
@@ -22,6 +22,16 @@
           <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+            <h3 class="banner-greeting">Hi, I am</h3>
+            <h2 class="banner-title">Shariar Islam</h2>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+        </div>
+        <img class="profile-pic" src="/images/Shariar_Islam_Niaj.png" alt="Shariar_Islam_Niaj">
+      </div>
     </header>
 
     <main></main>
