--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <sectoion class="about">
+        <h2 class="section-title">  About ME </h2>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis eaque ipsam cumque accusamus quas natus. Rerum in porro iste quod.</p>
+      </sectoion>
+    </main>
 
     <footer></footer>
   </body>
