added about info

--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
       <sectoion class="about">
         <h2 class="section-title">  About ME </h2>
         <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis eaque ipsam cumque accusamus quas natus. Rerum in porro iste quod.</p>
+
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-title">Name</h4>
+            <p class="info-description">Shariar Islam</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email</h4>
+            <p class="info-description">Shariarn85@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">DOB</h4>
+            <p class="info-description">16-08-2000</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From</h4>
+            <p class="info-description">CTG, BD</p>
+          </div>
+        </div>
       </sectoion>
     </main>
 
