--- a/index.html
+++ b/index.html
@@ -24,20 +24,31 @@
       </nav>
       <div class="banner">
         <div class="banner-content">
-            <h3 class="banner-greeting">Hi, I am</h3>
-            <h2 class="banner-title">Shariar Islam</h2>
-            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact</button>
+          <h3 class="banner-greeting">Hi, I am</h3>
+          <h2 class="banner-title">Shariar Islam</h2>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
         </div>
-        <img class="profile-pic" src="/images/Shariar_Islam_Niaj.png" alt="Shariar_Islam_Niaj">
+        <img
+          class="profile-pic"
+          src="/images/Shariar_Islam_Niaj.png"
+          alt="Shariar_Islam_Niaj"
+        />
       </div>
     </header>
 
     <main>
+      <!-- about section start -->
       <sectoion class="about">
-        <h2 class="section-title">  About ME </h2>
-        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis eaque ipsam cumque accusamus quas natus. Rerum in porro iste quod.</p>
+        <h2 class="section-title">About ME</h2>
+        <p class="section-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis eaque
+          ipsam cumque accusamus quas natus. Rerum in porro iste quod.
+        </p>
 
         <div class="about-info-container">
           <div class="about-info">
@@ -58,6 +69,43 @@
           </div>
         </div>
       </sectoion>
+      <!-- about section end -->
+
+      <!-- what i do section start -->
+      <section>
+        <h3 class="section-title">What I Do</h3>
+        <p id="what-i-do-description" class="section-description">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores
+          dolorem laboriosam vitae minus possimus numquam modi omnis enim quae
+          sint incidunt quaerat fugiat libero vel sunt deserunt similique, sequi
+          ullam! Praesentium quos, ipsum id corrupti aut incidunt unde.
+          Consectetur quos, odio suscipit ea laudantium cupiditate repellendus.
+          Corporis, iusto! Magnam, debitis.
+        </p>
+
+        <div class="skills-container">
+          <div class="skill">
+            <img src="/images/icons/js.png" alt="">
+            <h3 class="skill-title">Vanilla JS</h3>
+            <p class="skill description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, mollitia?</p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/react.png" alt="">
+            <h3 class="skill-title">React</h3>
+            <p class="skill description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium, expedita?</p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/nodejs.png" alt="">
+            <h3 class="skill-title">Node.js</h3>
+            <p class="skill description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, eos!</p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/mongo.png" alt="">
+            <h3 class="skill-title">MongoDB</h3>
+            <p class="skill description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, numquam!</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
