--- a/index.html
+++ b/index.html
@@ -207,6 +207,19 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-column">
+        <h2 class="section-title">Lets Connect</h2>
+        <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <div class="social-links">
+          <a href="https://facebook.com"><img src="/images/icons/facebook.png" alt=""></a>
+          <a href="https://facebook.com"><img src="/images/icons/insta.png" alt=""></a>
+          <a href="https://facebook.com"><img src="/images/icons/twitter.png" alt=""></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h2 class="section-title">Message Me</h2>
+      </div>
+    </footer>
   </body>
 </html>
