--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@
       </div>
       <div class="footer-column">
         <h2 class="section-title">Message Me</h2>
+        <form class="contact" action="">
+          <input type="text" name="name" id="name" placeholder="Your Name">
+          <input type="email" name="email" id="email" placeholder="Your Email">
+          <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Message"></textarea>
+          <input class="btn-primary" type="submit" value="submit">
+        </form>
       </div>
     </footer>
   </body>
